--- a/css/style.css
+++ b/css/style.css
@@ -1189,7 +1189,7 @@ footer .credits a {
 	display: block;
 	margin: 100px;
 	height: 5px;
-	background: #31708F;
+	background: #fff;
 }
 .timeline-list::before,
 .timeline-list::after {
@@ -1200,7 +1200,7 @@ footer .credits a {
 	width: 0;
 	height: 0;
   border-radius: 10px;
-	border: 10px solid #31708F;
+  border: 10px solid #fff;
 }
 .timeline-list::before {
 	left: -5px;
@@ -1209,7 +1209,7 @@ footer .credits a {
 	right: -10px;
 	border: 10px solid transparent;
 	border-right: 0;
-	border-left: 20px solid #31708F;
+	border-left: 20px solid #fff;
   border-radius: 3px;
 }
 
@@ -1235,7 +1235,7 @@ footer .credits a {
 	display: block;
 	width: 6px;
 	height: 6px;
-	border: 4px solid #31708F;
+	border: 4px solid #fff;
 	border-radius: 10px;
 	background: #fff;
   position: absolute;
