--- a/css/style.css
+++ b/css/style.css
@@ -709,6 +709,7 @@ a:hover {
   padding: 2.5rem 1.3rem;
   border-radius: 1rem;
   margin-bottom: 3rem;
+  height: 50vh;
 }
 
 .service-box:hover .ico-circle {
@@ -729,7 +730,7 @@ a:hover {
 }
 
 .service-box .s-title {
-  font-size: 1.4rem;
+  font-size: 1rem;
   text-transform: uppercase;
   text-align: center;
   padding: .4rem 0;
