--- a/css/style.css
+++ b/css/style.css
@@ -1215,7 +1215,8 @@ footer .credits a {
 	left: -5px;
 }
 .img-stage{
-  width: 300px;
+  width: 450px;
+  margin-left: 15px;
 }
 .img-left{
   width: 50%;
